# zepto-on-drugs

./: .gitignore  AUTHENTICATION_SETUP.md  README.md  pyproject.toml
backend/: LICENSE  env.example  main.py  pyproject.toml
frontend/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml
frontend/.next/: trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: server-reference-manifest.js
frontend/.next/server/app/: page.js
frontend/.next/server/chunks/: [root-of-the-server]__48b32c58._.js.map  node_modules_next_229848ed._.js.map
frontend/.next/static/chunks/: [root-of-the-server]__a2f1cdd3._.css  [root-of-the-server]__a2f1cdd3._.css.map  node_modules_@swc_helpers_cjs_00636ac3._.js.map  node_modules_next_dist_1a6ee436._.js.map  node_modules_next_dist_2ecbf5fa._.js.map  node_modules_next_dist_73542e98._.js.map  node_modules_next_dist_client_8f19e6fb._.js  node_modules_next_dist_client_8f19e6fb._.js.map  node_modules_next_dist_compiled_2ce9398a._.js.map  node_modules_next_dist_ea69acce._.js.map  src_app_globals_css_f9ee138c._.single.css  src_app_globals_css_f9ee138c._.single.css.map
frontend/src/app/: globals.css  layout.js  opengraph-image.jsx  page.js
frontend/src/app/components/: Header.jsx  Sidebar.jsx
frontend/src/app/dashboard/: page.jsx
frontend/src/app/hospital/: layout.js  page.jsx
frontend/src/app/login/: page.js
frontend/src/app/nurse/: layout.js  page.jsx
frontend/src/app/participants/: page.jsx
frontend/src/components/: ProtectedRoute.jsx
frontend/src/contexts/: AuthContext.jsx
(+47 files in other folders)
